[package]
name = "kex"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Arsynth/kex"
keywords = ["hex", "hexdump", "streamed", "dump", "IO"]
categories = ["parsing"]
description = "Library for streamed hex dumping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"